--- a/src/aulas_anteriores.html
+++ b/src/aulas_anteriores.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Link para o Tailwind.css -->
-        <link rel="stylesheet" href="../dist/output.css">
+        <link rel="stylesheet" href="../dist/saida.css">
 
         <title>Aprendendo Tailwind CSS</title>
 
